a1/brendan_gordon/TEST_PROGRAMS/invalidtype/armin_taheri/invalidtype4.min
var input: float;

read input;

print input;

print -input;

print "" - input;
